[tool.poetry]
name = "videohash"
version = "9.2.1"
authors = ["gfield <github@gfield.de>"]
description = "Generate perceptual hashes for video similarity detection. "
license = "MIT"
homepage = "https://github.com/gfieldGG/videohash"

[tool.poetry.dependencies]
python = ">=3.11,<3.16"
Pillow = ">=10.1.0,<=12.2.0"
ImageHash = ">=4.3.1,<=4.3.2"
numpy = ">=1.23,<2.5.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.5"
mypy = ">=1.6.1"
types-Pillow = ">=10.1.0.0"
notebook = ">=6.5.2"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
implicit_optional = true

[tool.ruff.lint]
ignore = ["E741", "F401"]

[tool.pytest.ini_options]
markers = ["gold", "integration"]

[tool.coverage.run]
branch = true
include = ["videohash/*.py"]
omit = ["tests/*", ".venv/*", "*/__init__.py", "*/__version__.py", "*/exceptions.py"]
